# rio

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  nodelet_plugins.xml  package.xml
cfg/: calibration.yaml  cam.yaml  rio.yaml  rio_frontend.yaml  rio_multiplot.xml  rviz.rviz
doc/wiring_diagram/: wiring_diagram.pro  wiring_diagram.sch
include/rio/: common.h  least_squares.h  rio.h
include/rio/gtsam/: doppler_factor.h  expressions.h  functions.h  landmark_tracker.h  optimization.h  propagation.h  state.h
include/rio/ros/: baro.h  base_sensor.h  common.h  imu.h  landmark_tracker.h  rio.h  rio_frontend.h
launch/: calibration.launch  rio.launch  sensors.launch
mmwave_sdk_catkin/: CMakeLists.txt  README.md  package.xml
mmwave_sdk_catkin/cmake/: mmwave_sdk-extras.cmake.in
mmwave_sdk_catkin/patches/: select_awr1843.patch
radar_firmware/: README.md
rio/: CMakeLists.txt  nodelet_plugins.xml  package.xml
rio/cfg/: calibration.yaml  cam.yaml  imu.yaml  rio.yaml  rio_frontend.yaml  rio_multiplot.xml  rio_protoquad.yaml  rio_quail.yaml  rviz.rviz
rio/include/rio/: common.h
rio/include/rio/gtsam/: doppler_factor.h  expressions.h  landmark_tracker.h  optimization.h  propagation.h  radial_velocity.h  state.h
rio/include/rio/ros/: baro.h  base_sensor.h  common.h  imu.h  landmark_tracker.h  radar.h  rio.h  rio_frontend.h
rio/launch/: quail.launch  radar_demo.launch  sensors.launch
rio/msg/: DopplerResidual.msg  Timing.msg
rio/script/: bias_imu.py  robust_loss.py
rio/src/: least_squares.cpp
rio/src/gtsam/: doppler_factor.cpp  landmark_tracker.cpp  optimization.cpp  propagation.cpp  state.cpp
rio/src/nodes/: baro_demo.cpp  imu_demo.cpp  radar_demo.cpp
rio/src/ros/: baro.cpp  baro_nodelet.cpp  base_sensor.cpp  common.cpp  imu.cpp  landmark_tracker.cpp  radar.cpp  rio.cpp  rio_frontend.cpp
rio/src/ros/nodelets/: baro_nodelet.cpp  imu_nodelet.cpp  radar_nodelet.cpp  rio_frontend_nodelet.cpp  rio_nodelet.cpp
rio/src/ros/nodes/: rio_calibration_node.cpp
rio/test/: adjoint-test.cpp  doppler_factor-test.cpp  optimization-test.cpp
script/: plot_residuals.py  plot_residuals_baro.py  plot_residuals_doppler.py  plot_velocities_robust_doppler.py  plot_vertical_velocity_robust_baro.py  robust_loss.py
src/: common.cpp  least_squares.cpp  rio.cpp  rio_calibration_node.cpp  rio_node.cpp  rio_nodelet.cpp
src/gtsam/: doppler_factor.cpp  functions.cpp  landmark_tracker.cpp  optimization.cpp  propagation.cpp  radial_velocity.cpp  state.cpp
src/nodelets/: baro_nodelet.cpp  imu_nodelet.cpp
src/nodes/: radar_demo.cpp
src/ros/: baro_nodelet.cpp  base_sensor.cpp  common.cpp  imu.cpp  landmark_tracker.cpp  radar.cpp  rio.cpp  rio_frontend.cpp
src/ros/nodelets/: rio_nodelet.cpp
src/ros/nodes/: rio_calibration_node.cpp  rio_frontend_node.cpp  rio_node.cpp
test/: adjoint-test.cpp  doppler_factor-test.cpp  optimization-test.cpp
