<?xml version="1.0"?>
<package format="2">
  <name>rio</name>
  <version>0.0.0</version>
  <description>
    Radar-inertial odometry estimation for autonomous vehicles.
  </description>
  <author>Rik Bähnemann</author>
  <maintainer email="brik@ethz.ch">Rik Bähnemann</maintainer>

  <license>TBD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>lpp</depend>
  <depend>mav_sensors_drivers</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>roslib</depend>
  <depend>tf2_eigen</depend>
  <depend>nodelet</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugin.xml" />
  </export>

</package>